# django-playgroud

./: .gitignore  db.sqlite3  pyproject.toml
app/: settings.py  urls.py
app/template/: base.html
cars/: admin.py  models.py  views.py
cars/migrations/: 0001_initial.py  0002_car_brand.py  0003_brand_alter_car_brand.py  0004_car_photo_car_plate.py  0005_alter_car_photo.py  0006_alter_car_photo.py
cars/static/css/: cars_list.css  new_car.css
cars/templates/: cars_list.html  new_car.html
