[tool.poetry]
name = "django-playgroud"
version = "0.1.0"
description = "Ambiente de teste para Django com Poetry"
authors = ["lcsmarcone <lcsmarcone@gmail.com>"]
readme = "README.md"
packages = [{ include = "django_playgroud", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.4,<6.0.0"
pillow = "^11.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
